[gd_scene load_steps=6 format=3 uid="uid://dwqcau78csr7q"]

[ext_resource type="Script" uid="uid://co6bva1a0tbwh" path="res://Scripts/Microgames/RadioDial/radio_dial.gd" id="1_vc6sy"]
[ext_resource type="Texture2D" uid="uid://5rjpjxnhu5a4" path="res://Assets/Microgames/RadioDial/radio_slider.png" id="2_huf7y"]
[ext_resource type="Texture2D" uid="uid://b320jexxftud6" path="res://Assets/Microgames/RadioDial/radio.png" id="2_nxja5"]
[ext_resource type="Texture2D" uid="uid://dac0g17fk0s66" path="res://Assets/Microgames/RadioDial/lightbulb_lit.png" id="4_4aj3i"]
[ext_resource type="Texture2D" uid="uid://dixw601poathd" path="res://Assets/Microgames/RadioDial/lightbulb_dark.png" id="5_bb88y"]

[node name="RadioDial" type="Node2D"]
script = ExtResource("1_vc6sy")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 15.0
offset_top = -4.0
offset_right = 1167.0
offset_bottom = 644.0
color = Color(0.92156863, 0.8392157, 0.9843137, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 398.0
offset_top = 304.0
offset_right = 764.0
offset_bottom = 364.0
color = Color(0.40784314, 0.49803922, 0.8980392, 1)

[node name="Slider" type="Sprite2D" parent="."]
position = Vector2(696, 337)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_huf7y")

[node name="Bar" type="Sprite2D" parent="."]
position = Vector2(585, 338)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_nxja5")

[node name="BulbOn" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 246)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_4aj3i")

[node name="BulbOff" type="Sprite2D" parent="."]
position = Vector2(576, 246)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_bb88y")
